build the backend logic for contact page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
+
+{% block content %}
 <h1>This is the About page!!</h1>
 
 <div id="personal_bio">
     <p>I'm Zhengxi Tan. People usually just call me Tan:). </p>
 </div>
+{% endblock %}
