--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,14 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
-<h1>Leave me some messages!!!</h1>
+{% block content %}
+    <h2>Contact</h2>
+    {% for error in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ error }}
+        </div>
+    {% endfor %}
+
+    {{ wtf.quick_form(form) }}
+{% endblock %}
