--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -1,14 +1,12 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
-<h1>I will be writing some interesting blogs!</h1>
+<h1>The following are my lovely blogs!!</h1>
 
-<h2>The following are some comments: </h2>
-{% for comment in comments %}
-    <p>Nice comment: {{ comment.body }} </p>
-{% endfor %}
-
-{{ wtf.quick_form(form) }}
+<ul>
+    {% for post in posts %}
+        <li><a href="{{ url_for('single_blog', blogname=post.header) }}">{{ post.header }}</a></li>
+    {% endfor %}
+</ul>
 
 {% endblock %}
